// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileGallery Component FileGallery renders and handles delete of error files 1`] = `
<div>
  <span
    style="display: inline-block; width: 100%; overflow: hidden;"
  >
    <div
      class="item-container error"
    >
      <div
        class="left"
      >
        <div
          class="paperclip-icon"
        >
          <i
            class="icon"
            icon="fal,exclamation-triangle"
          />
        </div>
        <div
          class="name"
          data-testid="TEST-ID-download"
        >
          NAME
           (1.21 kB)
        </div>
      </div>
      <div
        class="right"
      >
        <div
          class="delete-icon"
          data-testid="TEST-ID-delete"
        >
          <i
            class="icon"
            icon="fal,trash-alt"
          />
        </div>
      </div>
    </div>
  </span>
  <div>
    <div
      class="gds-tooltip top"
      style="left: -99999px; top: -99999px; opacity: 0;"
    >
      <div
        class="tooltip-arrow"
      />
      <div
        class="tooltip-label"
      >
        ERROR
      </div>
    </div>
  </div>
</div>
`;

exports[`FileGallery Component FileGallery renders and handles delete of uploading files 1`] = `
<div>
  <div
    class="item-container"
  >
    <div
      class="left"
    >
      <div
        class="paperclip-icon"
      >
        <i
          class="icon"
          icon="fal,paperclip"
        />
      </div>
      <div
        class="name downloadable"
        data-testid="TEST-ID-download"
      >
        NAME
      </div>
    </div>
    <div
      class="right"
    >
      <progress
        class="progress"
        max="100"
        value="50"
      />
      <svg
        aria-hidden="true"
        class="icon gds-loader size-1x spinner-icon"
        data-testid="TEST-ID-spinner"
        focusable="false"
        height="50"
        icon="fal,spinner"
        preserveAspectRatio="xMidYMid"
        role="img"
        style="background: transparent;"
        viewBox="0 0 100 100"
        width="50"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="50"
          cy="50"
          fill="transparent"
          r="30"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="10"
        >
          <animatetransform
            attributeName="transform"
            dur="2s"
            keyTimes="0;0.5;1"
            repeatCount="indefinite"
            type="rotate"
            values="0 50 50;180 50 50;720 50 50"
          />
          <animate
            attributeName="stroke-dasharray"
            dur="2s"
            keyTimes="0;0.5;1"
            repeatCount="indefinite"
            values="20 150; 150 20; 20 150"
          />
        </circle>
      </svg>
    </div>
  </div>
</div>
`;

exports[`FileGallery Component FileGallery renders and handles download and delete of done files 1`] = `
<div>
  <div
    class="item-container"
  >
    <div
      class="left"
    >
      <div
        class="paperclip-icon"
      >
        <i
          class="icon"
          icon="fal,paperclip"
        />
      </div>
      <div
        class="name downloadable"
        data-testid="TEST-ID-download"
      >
        NAME
      </div>
    </div>
    <div
      class="right"
    >
      <div
        class="delete-icon"
        data-testid="TEST-ID-delete"
      >
        <i
          class="icon"
          icon="fal,trash-alt"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`FileGallery Component FileGallery renders disabled deleting file 1`] = `
<div>
  <div
    class="item-container"
  >
    <div
      class="left"
    >
      <div
        class="paperclip-icon"
      >
        <i
          class="icon"
          icon="fal,paperclip"
        />
      </div>
      <div
        class="name"
        data-testid="TEST-ID-download"
      >
        NAME
      </div>
    </div>
    <div
      class="right"
    />
  </div>
</div>
`;

exports[`FileGallery Component FileGallery renders readonly of uploading file 1`] = `
<div>
  <div
    class="item-container"
  >
    <div
      class="left"
    >
      <div
        class="paperclip-icon"
      >
        <i
          class="icon"
          icon="fal,paperclip"
        />
      </div>
      <div
        class="name downloadable"
        data-testid="TEST-ID-download"
      >
        NAME
      </div>
    </div>
    <div
      class="right"
    >
      <progress
        class="progress"
        max="100"
        value="50"
      />
    </div>
  </div>
</div>
`;

exports[`FileGallery Component FileGallery renders without datatestid 1`] = `
<div>
  <div
    class="item-container"
  >
    <div
      class="left"
    >
      <div
        class="paperclip-icon"
      >
        <i
          class="icon"
          icon="fal,paperclip"
        />
      </div>
      <div
        class="name downloadable"
      >
        NAME
      </div>
    </div>
    <div
      class="right"
    >
      <div
        class="delete-icon"
      >
        <i
          class="icon"
          icon="fal,trash-alt"
        />
      </div>
    </div>
  </div>
</div>
`;
